Master implementado en Ventas (No funciona el detalle)

--- a/HuergoMotors.Web/Principal.Master
+++ b/HuergoMotors.Web/Principal.Master
@@ -19,6 +19,7 @@
                     <asp:MenuItem Text="Accesorios" Value="Accesorios"></asp:MenuItem>
                     <asp:MenuItem Text="Clientes" Value="Clientes"></asp:MenuItem>
                     <asp:MenuItem Text="Vendedores" Value="Vendedores"></asp:MenuItem>
+                    <asp:MenuItem Text="Ventas" Value="Ventas"></asp:MenuItem>
                     <asp:MenuItem Text="Cerrar Sesión" Value="Cerrar Sesión"></asp:MenuItem>
                 </Items>
             </asp:Menu>
