--- a/HuergoMotors.Web/Principal.Master
+++ b/HuergoMotors.Web/Principal.Master
@@ -15,15 +15,15 @@
         <div>
             
             <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-                <a class="navbar-brand" href="#">
-                    <img src="/Resources\HuergoMotorsIcono.png" width="32" height="32" class="d-inline-block align-top" alt=""> HuergoMotors</a>
+                <a class="navbar-brand" href="/webHome.aspx">
+                    <img src="/Resources/HuergoMotorsIcono.png" width="50" height="50" class="d-inline-block align-top" alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="/webVehiculos.aspx">Vehiculos</a>
                         </li>
                         <li class="nav-item">
