--- a/HuergoMotors.Web/Principal.Master
+++ b/HuergoMotors.Web/Principal.Master
@@ -22,7 +22,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="/webVehiculos.aspx">Vehiculos</a>
                         </li>
@@ -49,14 +49,15 @@
                                 <a class="dropdown-item" href="/AMS/webVentasAlta.aspx">Venta</a>
                             </div>
                         </li>
-                        <li
-                            
-                            <asp:Label ID="lbUsuario" CssClass="navbar-text" runat="server" Text="[...]"></asp:Label>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/webLogin.aspx">Cerrar Sesion</a>
-                        </li>
                     </ul>
+
+
+                    <div class="nav-item">
+                        <asp:Label ID="lbUsuario" CssClass="navbar-text" runat="server" Text="[...]"></asp:Label>
+                    </div>
+                    <div class="nav-link">
+                        <a class="nav-link" href="/webLogin.aspx">Cerrar Sesion</a>
+                    </div>
                 </div>
             </nav>
             
